// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on GifGrid component should <GifGrif /> match with the snapshot 1`] = `
<Fragment>
  <h3>
     
    Goku
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Tests on GifGrid component should show the items when the images are loaded useFetchGifs 1`] = `
<Fragment>
  <h3>
     
    Goku
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="image title"
      url="https://localhost/image.jpg"
    />
    <GifGridItem
      id="ABCD"
      key="ABCD"
      title="image title"
      url="https://localhost/image.jpg"
    />
  </div>
</Fragment>
`;
